# license_scanner_tests

./: README.md
.github/workflows/: python-licenses-tests.yml
good-weather/: pyproject.toml
